--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.04.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "uuidv4": "^6.2.7",
