--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bootstrap": "^4.6.0",
     "react": "^16.04.2",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^17.0.2",
+    "react-confirm-alert": "^2.7.0",
+    "react-dom": "^16.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
