--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
   "bugs": {
     "url": "https://github.com/Gokulreact/react-bootstrap/issues"
   },
-  "homepage": "https://github.com/Gokulreact/react-bootstrap#readme"
+  "homepage": "http://localhost:3000/"
 }
