--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.0.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^1.1.5",
     "uuidv4": "^6.2.7",
     "web-vitals": "^1.1.1"
   },
@@ -45,7 +45,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Gokulreact/react-bootstrap.git"
